--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html,body{
 body{
     align-items: center;
     justify-content: center;
-    background-color:  #cc9900;
+    background-color:  #520060;
     display: flex;
 }
 
